--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,77 @@
 .background {
-    background: rgb(2, 0, 36);
-    background: linear-gradient(344deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 50%, rgba(0, 212, 255, 1) 100%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-size: 300% 300%;
+    background-image: linear-gradient(75deg, #0d1b2a 0%, #1b263b 25%, #415a77 51%, #778da9 100%);
+    -webkit-animation: AnimateBG 17s ease infinite;
+    animation: AnimateBG 17s ease infinite;
+}
+
+@-webkit-keyframes AnimateBG {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+@keyframes AnimateBG {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+@-webkit-keyframes AnimateBG {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+@keyframes AnimateBG {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 .btn-primary {
-    background-color: #242F40;
+    background-color: #415a77;
+    border: none;
+}
+
+.btn-outline-primary {
+    color: #415a77;
+    border-color: #415a77;
 }
 
 .btn:hover {
-    background: #EFCB68;
-    color: black;
+    background: #1b263b;
 }
 
 a:hover {
-    color: #EFCB68;
-}
-
-.skill ul li::marker {
-    content: "✔";
-    /* Your symbol here */
+    color: #efcb68;
 }
 
 a {
@@ -26,9 +79,9 @@ a {
     text-decoration: none !important;
 }
 a:hover {
-    color:black; 
-    text-decoration:none !important; 
-    cursor:pointer;  
+    color: black;
+    text-decoration: none !important;
+    cursor: pointer;
 }
 
 .about_me {
